# topo-shadow-box

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  walkthrough.md
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
docs/: development.md  releasing.md  tool-reference.md
docs/plans/: 2026-02-12-mesh-generation-port-design.md  2026-02-12-mesh-generation-port-plan.md  2026-02-24-codebase-improvements-design.md  2026-02-24-codebase-improvements.md  2026-02-24-mcp-improvements-design.md  2026-02-24-mcp-improvements.md  2026-02-24-pydantic-refactor-design.md  2026-02-24-pydantic-refactor.md  2026-02-25-geocoding-design.md  2026-02-25-geocoding.md  2026-02-25-github-actions-design.md  2026-02-25-github-actions.md  2026-02-25-permissions-docs-design.md  2026-02-26-geocode-user-selection-design.md  2026-02-26-geocode-user-selection.md  2026-03-02-go-port-design.md  2026-03-02-go-port.md  2026-03-04-cli-design.md  2026-03-04-cli.md
go/: go.mod  go.sum  topo-shadow-box
go/cmd/topo-shadow-box/: cli.go  cli_test.go  main.go  serve.go
src/topo_shadow_box/: __init__.py  __main__.py  models.py  server.py  state.py
tests/: test_area_tools.py  test_building_shapes.py  test_core_models.py  test_elevation.py  test_exporters.py  test_generate_progress.py  test_integration.py  test_mcp_smoke.py  test_mesh.py  test_models.py  test_osm.py  test_plugin_manifests.py  test_prereqs.py  test_session_tools.py  test_shape_clipper.py  test_state_models.py  test_state_resource.py
tests/fixtures/: sample.gpx
(+58 files in other folders)
